# MyTestApp

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/tongfu/mytestapp/: ClassLoaderTest.java  ExampleInstrumentedTest.java
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/tongfu/mytestapp/: MyTestWidgetInterface.aidl
app/src/main/aidl/com/tongfu/mytestapp/service/: MusicPlayInterface.aidl
app/src/main/assets/: patch.apk  test.html
app/src/main/java/com/tongfu/mytestapp/: MainActivity.java  MyApplication.java  TraceRecorder.java  UriActivity.kt
app/src/main/java/com/tongfu/mytestapp/advertise/: AdvertiseActivity.java
app/src/main/java/com/tongfu/mytestapp/animation/: AnimationEntryActivity.java
app/src/main/java/com/tongfu/mytestapp/architecture/: ArchitectureActivity.java
app/src/main/java/com/tongfu/mytestapp/bigimage/: BigImageActivity.java
app/src/main/java/com/tongfu/mytestapp/bitmap/: BitmapTransformActivity.kt
app/src/main/java/com/tongfu/mytestapp/broadcastreceiver/: BroadcastReceiverActivity.java  MyDynamicReceiver.java  (+1 more)
app/src/main/res/anim/: anim_fragment_exit_to_left.xml  anim_fragment_exit_to_right.xml  anim_fragment_show_from_left.xml  anim_fragment_show_from_right.xml  fanzhuan.xml
app/src/main/res/animator/: animator01.xml  animator02.xml
app/src/main/res/drawable/: ic_blank.xml  xuexiaoban.xml
app/src/main/res/layout/: activity_activity_lifecycle_test.xml  activity_activity_lifecycle_test2.xml  activity_advanced_use1.xml  activity_advertise.xml  activity_animate_linear_layout_change.xml  activity_animation_entry.xml  activity_architecture.xml  activity_big_image.xml  activity_bitmap_transform.xml  activity_bottom.xml  activity_broadcast_receiver.xml  activity_camera_x.xml  activity_contact.xml  activity_content_provider.xml  activity_coordinator_layout.xml  activity_crash_record.xml  activity_dagger2_test.xml  activity_dagger_base_use.xml  activity_data_binding.xml  activity_database_menu.xml  activity_dbsqlite_open_helper.xml  activity_event_bus.xml  activity_event_dispatch_test.xml  activity_exo_video_play.xml  activity_fragment_lifecycle.xml  activity_frame_animation.xml  activity_glide.xml  activity_hello_gl2.xml  activity_hello_jni.xml  activity_hook.xml  activity_hook_menu.xml  activity_hot_update_class_loader.xml  activity_hot_update_menu.xml  activity_http_client.xml  activity_http_url_connection.xml  activity_ijk_video_play.xml  activity_image_load_entry.xml  activity_j_n_i_call.xml  activity_jni_callback.xml  activity_layout.xml  (+115 more)
app/src/main/res/layout-w900dp/: sampleitem_list.xml
app/src/main/res/menu/: menu_database_list.xml  menu_lifecycle_test.xml  menu_sample_ad_mob.xml  menu_sample_basic.xml  menu_sample_scrolling.xml
app/src/main/res/navigation/: test_nav.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: config.xml  my_test_widget_info.xml
app/src/main/rs/com/: Grey.rs
app/src/test/java/com/tongfu/mytestapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle
mylibrary/src/androidTest/java/com/rentf/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/java/com/rentf/mylibrary/: JniUtil.java  TestLibrary.java
mylibrary/src/main/jni/: CMakeLists.txt  gl2demo.cpp  jnicallback.cpp  mynativeactivity.cpp  mysurface.cpp  native-lib.cpp  native_call.cpp  testlibrary.c  testlibrary.cpp
mylibrary/src/test/java/com/rentf/mylibrary/: ExampleUnitTest.java
ndkbuildsample/: build.gradle  gradle.properties
ndkbuildsample/src/androidTest/java/com/tongfu/ndkbuildsample/: ExampleInstrumentedTest.java  NdkBuildJniUtilTest.java
ndkbuildsample/src/main/: AndroidManifest.xml
ndkbuildsample/src/main/java/com/tongfu/ndkbuildsample/: NdkBuildJniUtil.java
ndkbuildsample/src/main/jni/: Android.mk  ndkbuildsample.cpp
ndkbuildsample/src/main/res/values/: strings.xml
ndkbuildsample/src/test/java/com/tongfu/ndkbuildsample/: ExampleUnitTest.java
(+227 files in other folders)
